# api/handler/user.go
@@ -79,15 +79,18 @@ func (h *Handler) GetUser(c *gin.Context) {
 // @Produce      json
 // @Param        page query int false "Page number"
 // @Param        limit query int false "Limit"
+// @Param        search query string false "Search"
 // @Success      200  {object}  models.UsersResponse
 // @Failure      500  {object}  models.Response
 func (h *Handler) GetUserList(c *gin.Context) {
 	page := c.DefaultQuery("page", "1")
 	limit := c.DefaultQuery("limit", "10")
+	search := c.DefaultQuery("search", "")
 
 	request := models.GetListRequest{
-		Page:  atoi(page),
-		Limit: atoi(limit),
+		Page:   atoi(page),
+		Limit:  atoi(limit),
+		Search: search,
 	}
 
 	users, err := h.services.User().GetAllUsers(context.Background(), request)
